# advent-of-code

./: .gitignore  CMakeLists.txt  README.md
2024/day1/src/: main.rs
2024/day11/src/: main.rs
2024/day14/src/: main.rs
2024/day15/: sample2_.txt
2024/day15/src/: main.rs
2024/day2/src/: main.rs
2024/day3/src/: main.rs
2024/day4/src/: main.rs
2024/day5/src/: main.rs
2024/day7/src/: main.rs
2025/1/: 1.cpp  2.cpp
2025/2/: 1.cpp  2.cpp
